--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,40 @@ on:
 jobs:
   test-macos:
     name: Test (macOS, Swift ${{ matrix.swift }})
-    runs-on: macos-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        swift: [ "5.9", "5.10", "6.1" ]
+        include:
+          # 使用不同的 macOS runner 版本来获得不同的 Xcode/Swift 版本
+          - os: macos-13
+            swift: "5.9"
+          - os: macos-14  
+            swift: "5.10"
+          - os: macos-latest
+            swift: "6.1"
     
     steps:
       - uses: actions/checkout@v4
       
-      - name: Setup Swift
+      # 检查当前环境的 Xcode 和 Swift 版本
+      - name: Check environment
+        run: |
+          echo "=== Xcode 信息 ==="
+          xcode-select -p
+          if command -v xcodebuild &> /dev/null; then
+            xcodebuild -version
+          fi
+          
+          echo "=== Swift 信息 ==="
+          swift --version
+          
+          echo "=== 可用的 Xcode 版本 ==="
+          ls /Applications/ | grep Xcode || echo "未找到额外的 Xcode 版本"
+      
+      # 只有在版本不匹配时才使用 setup-swift
+      - name: Setup Swift (if needed)
+        if: ${{ matrix.swift != '6.1' && matrix.os == 'macos-latest' }}
         uses: swift-actions/setup-swift@v2
         with:
           swift-version: ${{ matrix.swift }}
@@ -29,14 +53,19 @@ jobs:
           path: |
             .build
             .swiftpm
-          key: macOS-swift-${{ matrix.swift }}-${{ hashFiles('Package.swift', 'Package.resolved') }}
+          key: macOS-${{ matrix.os }}-swift-${{ matrix.swift }}-${{ hashFiles('Package.swift', 'Package.resolved') }}
           restore-keys: |
-            macOS-swift-${{ matrix.swift }}-${{ hashFiles('Package.swift') }}
-            macOS-swift-${{ matrix.swift }}-
-            macOS-swift-
+            macOS-${{ matrix.os }}-swift-${{ matrix.swift }}-${{ hashFiles('Package.swift') }}
+            macOS-${{ matrix.os }}-swift-${{ matrix.swift }}-
       
       - name: Print Swift version
         run: swift --version
+      
+      # 清理构建缓存以避免模块冲突 (Swift 5.10 问题)
+      - name: Clean build cache
+        run: |
+          rm -rf .build
+          swift package clean
       
       - name: Build & Test
         run: |
@@ -102,5 +131,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: swift-actions/setup-swift@v2
         with:
-          swift-version: "5.10" # 只在最新版本跑 Lint
+          swift-version: "6.1"
       - run: swift run -c release --package-path Tools swiftformat .
